Fix osd dialog position

After the upgrade to kde-frameworks-5.93 the osd volume indicator is displayed in the top left corner of the screen instead of being displayed in the center of the screen.

BUG: 452648